addItem POST populates db

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,8 +16,10 @@
 <main>
   <section>
     <form>
-      <input type="text" id="todoItem" data-testid="toDoTextInput" placeholder="Add To Do"> 
+      <input type="text" id="toDoItem" data-testid="toDoTextInput" placeholder="Add To Do"> 
+      <button id="addButton" onclick="addItem(event)" data-testid="submitButton">Add Item</button>
     </form>
+  
     <table>
       <thead></thead>
     </table>
