trying to get renderItems to load db items upon refresh

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,13 +15,17 @@
   </header>
 <main>
   <section>
-    <form>
+   
       <input type="text" id="toDoItem" data-testid="toDoTextInput" placeholder="Add To Do"> 
       <button id="addButton" onclick="addItem(event)" data-testid="submitButton">Add Item</button>
-    </form>
-  
+  </section>
+  <section>
     <table>
-      <thead></thead>
+      <thead>
+      </thead>
+    <tbody id="toDosList">
+      <!-- list of to dos will populate here -->
+    </tbody>
     </table>
   </section>
 
