--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,6 +7,7 @@
   <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script defer src="./scripts/axios.js"></script>
   <script defer src="./scripts/client.js"></script>
+  <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
   <title>SQL TO-DO List</title>
 </head>
 <body>
