trying to map out isComplete

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -23,6 +23,8 @@
   <section>
     <table>
       <thead>
+        <tr>Item To Do</tr>
+        
       </thead>
     <tbody id="toDosList">
       <!-- list of to dos will populate here -->
