--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,7 +7,7 @@
   <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script defer src="./scripts/axios.js"></script>
   <script defer src="./scripts/client.js"></script>
-  <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css"> -->
   <title>SQL TO-DO List</title>
 </head>
 <body>
@@ -16,15 +16,17 @@
   </header>
 <main>
   <section>
-   
       <input type="text" id="toDoItem" data-testid="toDoTextInput" placeholder="Add To Do"> 
       <button id="addButton" onclick="addItem(event)" data-testid="submitButton">Add Item</button>
   </section>
   <section>
     <table>
       <thead>
-        <tr></tr>
-        
+        <tr>
+          <th>To Do</th>
+          <th>To Do Status</th>
+          <th>Delete</th>
+        </tr>        
       </thead>
     <tbody id="toDosList">
       <!-- list of to dos will populate here -->
