played with styles but didnt get the class completed part done

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,8 +16,8 @@
     <h1>SQL TO-DO List</h1>
   </header>
 <main>
-  <section>
-      <input type="text" id="toDoItem" data-testid="toDoTextInput" placeholder="Add To Do"> 
+  <section class="itemsBox">
+      <input type="text" id="toDoItem" data-testid="toDoTextInput" placeholder="Add To Do" size="50"> 
       <button id="addButton" onclick="addItem(event)" data-testid="submitButton">Add Item</button>
   </section>
   <section>
